Packaging and finishing the app

--- a/src/forms/ShowAuthors.form
+++ b/src/forms/ShowAuthors.form
@@ -22,7 +22,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;schoollibrary.Authors&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;entities.Authors&gt;"/>
       </AuxValues>
     </Component>
   </NonVisualComponents>
