--- a/src/forms/AddBook.form
+++ b/src/forms/AddBook.form
@@ -22,7 +22,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;schoollibrary.Authors&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;entities.Authors&gt;"/>
       </AuxValues>
     </Component>
     <Component class="javax.persistence.Query" name="authorsQuery1">
@@ -40,7 +40,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;schoollibrary.Authors&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;entities.Authors&gt;"/>
       </AuxValues>
     </Component>
   </NonVisualComponents>
