--- a/src/forms/ShowBooks.form
+++ b/src/forms/ShowBooks.form
@@ -22,7 +22,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;schoollibrary.Books&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;entities.Books&gt;"/>
       </AuxValues>
     </Component>
   </NonVisualComponents>
@@ -93,7 +93,7 @@
                 <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="String.class"/>
               </Subbinding>
               <Subbinding sourcePath="${author}">
-                <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="schoollibrary.Authors.class"/>
+                <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="entities.Authors.class"/>
               </Subbinding>
             </BindingProperty>
           </BindingProperties>
